@@ -1,3 +1,13 @@
+2021-01-19  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION (Version, Date): Roll minor version
+        * inst/include/Rcpp/config.h: Idem
+
+	* inst/include/RcppCommon.h: Preverse existing API and offer new
+	token-based API alongside via Rcpp_Precious{Preserve,Release}
+	* inst/include/Rcpp/String.h: Use Rcpp_Precious{Preserve,Release}
+	* inst/include/Rcpp/storage/PreserveStorage.h: Ditto
+
 2021-01-17  Iñaki Ucar  <iucar@fedoraproject.org>
 
 	* inst/include/Rcpp/String.h: Use Rcpp_{Preserve,Release}Object
